feat: 서점, 아티클 App, Web 용 분리 및 북마크 항목 추가
- 서점 아티클 APP, WEB 구분
- 북마크 했는지 항목 추가해서 내려줌